Fix links overlapping on mobile menu #7

--- a/src/components/HighlightLink/HighlightLink.scss
+++ b/src/components/HighlightLink/HighlightLink.scss
@@ -3,6 +3,7 @@
 a.highlight {
   position: relative;
   display: inline-block;
+  z-index: -1;
 
   &::before {
     position: absolute;
